# ForNdk

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/yue/kyle/forndk/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/yue/kyle/forndk/: MainActivity.java  TestJni1.java
app/src/main/jni/: com_yue_kyle_forndk_TestJni1.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/yue/kyle/forndk/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
